[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://dedus.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.8921, 71.1636 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.9096, 48.0602 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 64.4285, 549.537 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.14919, -31.3394 )
scale = Vector2( 0.399967, 0.450648 )
texture = ExtResource( 2 )

[node name="StandCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1.89488, -30.8502 )
scale = Vector2( 0.832538, 0.673176 )
shape = SubResource( 1 )

[node name="CrouchCollision" type="CollisionShape2D" parent="."]
position = Vector2( 4.45441, -11.1361 )
rotation = -1.5708
shape = SubResource( 2 )
disabled = true

[node name="UpperRayCast" type="RayCast2D" parent="."]
position = Vector2( 2.22726, 17.3726 )
rotation = 3.14159
scale = Vector2( 7.74477, 1.67896 )
enabled = true

[node name="BulletPos" type="Position2D" parent="."]
position = Vector2( -30.2906, -31.6265 )
